--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,7 @@
   <div class="sidebar-item">
     <p>{{ site.description }}</p>
   </div>
+  {% avatar peterzukerman %}
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
