--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
   <div class="sidebar-item">
     <p>{{ site.description }}</p>
   </div>
-  <&nbsp>{% avatar peterzukerman size=200 %}
+  <!-- {% avatar peterzukerman size=200 %} -->
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
