--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,8 @@
     <p>{{ site.description }}</p>
   </div>
   
+  <img src="https://avatars3.githubusercontent.com/u/31905508?s=460&v=4">
+
 
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Home</a>
