--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,26 @@
   <div class="sidebar-item">
     <p>{{ site.description }}</p>
   </div>
-  
-  <img src="https://avatars3.githubusercontent.com/u/31905508?s=460&v=4">
+  <style>
+    #avatar {
+    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
+    background-image: url('https://avatars3.githubusercontent.com/u/31905508?s=460&v=4');
+    
+    /* make a square container */
+    width: 150px;
+    height: 150px;
+
+    /* fill the container, preserving aspect ratio, and cropping to fit */
+    background-size: cover;
+
+    /* center the image vertically and horizontally */
+    background-position: top center;
+
+    /* round the edges to a circle with border radius 1/2 container size */
+    border-radius: 50%;
+  }
+  </style>
+  <div id="avatar"></div>
 
 
   <nav class="sidebar-nav">
