--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,6 @@
   </div>
   <style>
     #avatar {
-    /* This image is 687 wide by 1024 tall, similar to your aspect ratio */
     background-image: url('https://avatars3.githubusercontent.com/u/31905508?s=460&v=4');
     
     /* make a square container */
@@ -24,6 +23,9 @@
 
     /* round the edges to a circle with border radius 1/2 container size */
     border-radius: 50%;
+    margin: auto;
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
   }
   </style>
   <div id="avatar"></div>
