--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,8 +23,9 @@
 
     /* round the edges to a circle with border radius 1/2 container size */
     border-radius: 50%;
-    margin: auto;
-    top: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
   }
   </style>
   <div id="avatar"></div>
