--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,9 +23,9 @@
 
     /* round the edges to a circle with border radius 1/2 container size */
     border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
+    margin: auto;
+    position: absolute;
+    left: 0; right: 0;
   }
   </style>
   <div id="avatar"></div>
