--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,7 +24,7 @@
     /* round the edges to a circle with border radius 1/2 container size */
     border-radius: 50%;
     margin: auto;
-    position: absolute;
+    position: static;
     left: 0; right: 0;
   }
   </style>
