--- a/_layouts/post_listing.html
+++ b/_layouts/post_listing.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% for post in site.tags.en %}
+{% for post in site.tags.english %}
 <section class="post">
   <header class="post-header">
     <p class="post-meta">
