about page changed

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -8,7 +8,7 @@ I have had 3 technical internships and 1 volunteer experience related to compute
 At university, I am involved in the AI research group, SIGAI. I am also a member of the computational linguistics league, and am doing statistical machine translation research on Siberian Yupik, a critical language in Alaska.
 </br>
 </br>
-Currently I’m working at VoiceItt in Tel Aviv, Israel. There I do signal processing research and work to improve the speech recognition algorithm for noisy environments and accented speech.
+Currently I’m working at VoiceItt in Tel Aviv, Israel. There I do signal processing research and work to improve the speech recognition algorithm for noisy environments and accented speech. Recently I've been working on adding Amazon Alexa support for people who have speech disabilities.
 </br>
 </br>
 Have questions or suggestions? Feel free to contact me on Twitter or find me on LinkedIn.
