--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
   {% if page.image.feature %}
     <meta property="og:image" content="{{ site.url }}/img/{{ page.image.feature }}">
   {% else %}
-    <meta property="og:image" content="{{ site.url }}/img/leonids-logo.png">
+    <meta property="og:image" content="{{ site.url }}/img/profile.png">
   {% endif %}
   <title>{{ title }}</title>
 
