--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
   {% if page.image.feature contains 'https' or page.image.feature contains 'http' %}
   "{{ page.image.feature }}"
   {% else %}
-  "{{ site.url }}{{ page.image.feature }}"
+  "{{ site.url }}/img/{{ page.image.feature }}"
   {% endif %}
   alt="{{ page.title | escape }} feature image">
 
