contour post image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,8 @@
   <meta property="og:description" content="{{ description | escape }}">
   {% if page.image.feature %}
     <meta property="og:image" content="{{ site.url }}/img/{{ page.image.feature }}">
+  {% if page.header-img %}
+    <meta property="og:image" content="{{ site.url }}/{{ page.header-img }}" />
   {% else %}
     <meta property="og:image" content="{{ site.url }}/img/profile.png">
   {% endif %}
