contour post image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
   {% if page.image.feature %}
     <meta property="og:image" content="{{ site.url }}/img/{{ page.image.feature }}">
   {% if page.header-img %}
-    <meta property="og:image" content="{{ site.url }}/{{ page.header-img }}" />
+    <meta property="og:image" content="{{ page.header-img }}" />
   {% else %}
     <meta property="og:image" content="{{ site.url }}/img/profile.png">
   {% endif %}
