--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,7 @@
   <meta property="og:description" content="{{ description | escape }}">
   {% if page.image.feature %}
     <meta property="og:image" content="{{ site.url }}/img/{{ page.image.feature }}">
+  {% endif %}
   {% if page.header-img %}
     <meta property="og:image" content="{{ page.header-img }}" />
   {% else %}
