--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -5,10 +5,11 @@ I’m a junior at the University of Illinois at Urbana Champaign. I am studying 
 </br>
 </br>
 I have had 3 technical internships and 1 volunteer experience related to computer science. I was a software engineering intern at OverDrive Inc., Optima Solutions, and Rockwell Automation. I also volunteered at the CodeMash software convention, and gave a presentation on Unicode and text input. I am currently interning at VoiceItt, and I am part of their speech processing development team.
-At university, I am involved in the AI research group, SIGAI. I am also a member of the computational linguistics league, and am doing statistical machine translation research on Siberian Yupik, a critical language in Alaska.
+At university, I am involved in the AI research group, SIGAI. I am also a member of the computational linguistics league, and am doing statistical machine translation research on Siberian Yupik, a critical language in Alaska. Last year I worked at VoiceItt in Tel Aviv, Israel. There I did signal processing research and worked to improve the speech recognition algorithm for noisy environments and accented speech. I also worked on adding Amazon Alexa support for people who have speech disabilities.
+
 </br>
 </br>
-Currently I’m working at VoiceItt in Tel Aviv, Israel. There I do signal processing research and work to improve the speech recognition algorithm for noisy environments and accented speech. Recently I've been working on adding Amazon Alexa support for people who have speech disabilities.
+Currently I am interning at Raytheon as a natural language processing intern. I am working on Competency Aware Machine Learning (CAML).
 </br>
 </br>
 Have questions or suggestions? Feel free to contact me on Twitter or find me on LinkedIn.
