updated about me page

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,15 +1,19 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-I’m a junior at the University of Illinois at Urbana Champaign. I am studying Computer Science and Linguistics, with an interest in Natural Language Processing and Machine Learning. I am minoring in East Asian Languages and Cultures, and am actively working towards business proficiency in Japanese and Korean.
+I’m a senior at the University of Illinois at Urbana Champaign. I am studying Computer Science and Linguistics, with an interest in Natural Language Processing and Machine Learning. I am minoring in East Asian Languages and Cultures, and am actively working towards business proficiency in Japanese and Korean.
 </br>
 </br>
-I have had 3 technical internships and 1 volunteer experience related to computer science. I was a software engineering intern at OverDrive Inc., Optima Solutions, and Rockwell Automation. I also volunteered at the CodeMash software convention, and gave a presentation on Unicode and text input. I am currently interning at VoiceItt, and I am part of their speech processing development team.
-At university, I am involved in the AI research group, SIGAI. I am also a member of the computational linguistics league, and am doing statistical machine translation research on Siberian Yupik, a critical language in Alaska. Last year I worked at VoiceItt in Tel Aviv, Israel. There I did signal processing research and worked to improve the speech recognition algorithm for noisy environments and accented speech. I also worked on adding Amazon Alexa support for people who have speech disabilities.
+I have had 4 technical internships and 1 volunteer experience related to computer science. I was a software engineering intern at Raytheon BBN, VoiceItt, OverDrive, and Rockwell Automation. I also volunteered at the CodeMash software convention, and <a href="https://www.youtube.com/watch?v=lcsg2KSKDC4&ab_channel=PeterZukerman">gave a  presentation</a> on Unicode and text input. 
+
+At university, I am involved in the AI research group, SIGAI. I am also a member of the computational linguistics league, and am doing NLP research on Siberian Yupik, a critical language in Alaska. Last summer I interned at Raytheon on the Competency Aware Machine Learning team, where I worked on explainable AI and ML agent visualization.Two summers ago I worked at VoiceItt in Tel Aviv, Israel. There I did signal processing research and worked to improve the speech recognition algorithm for noisy environments and accented speech. I also worked on adding Amazon Alexa support for people who have speech disabilities.
 
 </br>
 </br>
-Currently I am interning at Raytheon as a natural language processing intern. I am working on Competency Aware Machine Learning (CAML).
+Currently I am finishing up my final semester at university and seeking full time positions.
+</br>
+</br>
+<a href="https://zuker.io/resume.pdf">Here is a link to my resume.</a>
 </br>
 </br>
 Have questions or suggestions? Feel free to contact me on Twitter or find me on LinkedIn.
