analytics, about page update

--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -21,6 +21,9 @@ layout: default
             {% include sections/skills.html %}    
         </div>
         <div class="row">
+            {% include sections/resumelink.html %}    
+        </div>
+        <div class="row">
             {% include sections/career.html %}    
         </div>
         <div class="row">
