updated descriptions and a few about pages

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -1,16 +1,14 @@
 <h1><span data-i18n="skills.my_skills">About</span></h1>
 
 <div>
-I’m a senior at the University of Illinois at Urbana Champaign. I am studying Computer Science and Linguistics, with an interest in Natural Language Processing and Machine Learning. I am minoring in East Asian Languages and Cultures, and am actively working towards business proficiency in Japanese and Korean.
+I'm a masters student in University of Washington's CLMS (Computational Linguistics) program. I'm also working as a natural language processing researcher at Infoscitex.
 </br>
 </br>
-I have had 4 technical internships, a co-op, and 1 volunteer experience related to computer science. I was a software engineering intern at Raytheon BBN, VoiceItt, OverDrive, and Rockwell Automation. I also volunteered at the CodeMash software convention, and <a href="https://www.youtube.com/watch?v=lcsg2KSKDC4&ab_channel=PeterZukerman">gave a presentation</a> on Unicode and text input. 
-
-At university, I am involved in the AI research group, SIGAI. I am also a member of the computational linguistics league, and am doing NLP research on Siberian Yupik, a critical language in Alaska. In January 2021, I started a co-op at Radiate as a full stack developer. Last summer I interned at Raytheon on the Competency Aware Machine Learning team, where I worked on explainable AI and ML agent visualization. Two summers ago I worked at VoiceItt in Tel Aviv, Israel. There I did signal processing research and worked to improve the speech recognition algorithm for noisy environments and accented speech. I also worked on adding Amazon Alexa support for people who have speech disabilities.
+Most of my work involves helping machines understand human language. I work on a variety of projects, including machine translation, question answering, and information extraction. I have also worked on projects involving natural language generation, sentiment analysis, and text summarization. I have an interest in low resource languages, having worked with Siberian Yupik, a language spoken by less than 1000 people. 
 
 </br>
 </br>
-Currently I am finishing up my final semester at university and seeking full time positions.
+Currently, I'm working on automatic transcription systems for specific domains of English.
 </br>
 </br>
 Have questions or suggestions? Feel free to contact me on Twitter or find me on LinkedIn.
